--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -137,8 +137,9 @@
             border-left: 2px solid $dimmed-white;
         }
 
-        li {
+        li, button {
             color: $white;
+            background-color: inherit;
             font-size: 20px;
             cursor: pointer;
             transition: .3s all ease-in-out;
@@ -160,7 +161,7 @@
                 background-color: $bg-light;
             }
 
-            a{
+            a, button{
                 display: block;
                 width: 100%;
                 height: 100%;
@@ -260,8 +261,9 @@
                 bottom: 0;
             }
 
-            a {
+            a, button {
                 font-size: 20px;
+                background-color: inherit;
                 color: $white;
                 text-decoration: none;
                 width: 100%;
