--- a/client/src/components/crypto-prices/market-banner.scss
+++ b/client/src/components/crypto-prices/market-banner.scss
@@ -25,6 +25,7 @@
         img {
             width: 100px;
             align-self: center;
+            aspect-ratio: 1/1;
         }
 
         h2 {
@@ -95,6 +96,7 @@
 
     img {
         width: 40px;
+        aspect-ratio: 1/1;
     }
     
     h3 {
