Bug fixes, refactoring, minor changes on frontend

--- a/client/src/Pages/Portfolio/portfolio.scss
+++ b/client/src/Pages/Portfolio/portfolio.scss
@@ -21,7 +21,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
-    align-items: flex-start;
+    justify-content: center;
     position: relative;
     h1{
         height: fit-content;
@@ -42,7 +42,6 @@
 .portfolio-view{
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
     
     a{
         text-decoration: none;
