--- a/client/src/Pages/Login/login.scss
+++ b/client/src/Pages/Login/login.scss
@@ -12,7 +12,7 @@
     box-sizing: border-box;
     max-width: 450px;
     width: 100%;
-    min-height: 715px;
+    min-height: 720px;
     background-color: $visible-grey;
     border-radius: 20px;
 }
@@ -92,10 +92,12 @@
     height: 100%;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
+    position: relative;
+    color: $white;
+    text-decoration: none;
     a{
         position: relative;
         color: $white;
-
         text-decoration: none;
 
         *{
@@ -131,4 +133,14 @@
     margin-left: auto;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
+}
+
+.loading-phase{
+    background-color: $darker-grey;
+    color: $dimmed-text-white;
+}
+
+.full{
+    width: 100%;
+    height: 100%;
 }
