--- a/client/src/components/crypto-prices/market-banner.scss
+++ b/client/src/components/crypto-prices/market-banner.scss
@@ -63,11 +63,11 @@
     height: 10px;
     border-bottom: 1px solid rgba(151, 151, 151, 0.685);
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-    width: 100% !important;
     text-align: right;
     padding: 1.5rem 1rem;
     place-content: center;
     box-sizing: border-box;
+    width: 100%;
     h3{
         font-weight: 400;
         height: 25px;
@@ -202,8 +202,9 @@
             margin: 1rem auto;
         }
     }
+
     .api-table{
-        height: 720px;
+        height: 730px;
         width: 850px;
         margin: 0 auto;
         overflow-x: scroll !important;
@@ -214,8 +215,9 @@
     }
 
     .heading{
-    display: none;
+        width: 850px;
     }
+
 }
 
 @media(max-width: 750px){
