--- a/client/src/Pages/Portfolio/portfolio.scss
+++ b/client/src/Pages/Portfolio/portfolio.scss
@@ -70,11 +70,12 @@
 }
 
 .portfolio-delete{
-    padding: .25rem;
+    padding: .5rem ;
     color: $white;
     background-color: $bg-light2;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .portfolio-loader{
