--- a/client/src/components/join-banner/join-banner.scss
+++ b/client/src/components/join-banner/join-banner.scss
@@ -287,7 +287,7 @@
     display: flex;
     justify-content: center;
     
-    button{
+    a{
         background-color: transparent;
         padding: 1.5rem 5rem;
         margin: 3rem 0;
@@ -296,8 +296,8 @@
         font-size: 1.5rem;
         color: $white;
         text-align: center;
-        width: 400px;
         transition: all .5s ease-in-out;
+        text-decoration: none;
         cursor: pointer;
         position: relative;
 
@@ -388,10 +388,10 @@
         width: 70%;
         margin: 0 auto;
         
-        button{
+        a{
             font-size: 1rem;
             white-space: nowrap;
-            width: 200px;
+            width: 220px;
             padding: 1rem 0;
         }
     }
