--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,3 +1,5 @@
+//SCSS Stylesheet for defining variables used throughout the application.
+
 //BLUES
 
 $bg-main: #141d35;
@@ -12,7 +14,7 @@ $bg-mid: #0b284d;
 
 $bg-mid2: #122640;
 
-$text-gradient: linear-gradient(298deg,#00eaff,#006fff 99%,#2382ff);
+$text-gradient: linear-gradient(298deg, #00eaff, #006fff 99%, #2382ff);
 
 $text-blue: #4194ec;
 
