--- a/client/src/Pages/Trending/marquee/marquee.scss
+++ b/client/src/Pages/Trending/marquee/marquee.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables.scss";
+@import "../../../styles/variables.scss";
 
 .marquee {
     --gap: 1rem;
@@ -28,12 +28,12 @@
     list-style: none
 }
 
-.marq-li{
+.marq-li {
     display: flex;
     align-items: center;
     gap: 10px;
 
-    img{
+    img {
         height: 30px;
         width: auto;
     }
