--- a/client/src/Pages/components/footer/footer.scss
+++ b/client/src/Pages/components/footer/footer.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables.scss";
+@import "../../../styles/variables.scss";
 
 .footer {
     position: relative;
@@ -12,6 +12,7 @@
 .image-store {
     display: flex;
     gap: 1rem;
+
     img {
         height: 45px;
     }
@@ -57,7 +58,7 @@
                 margin-bottom: 1rem;
                 cursor: auto;
 
-                &:hover{
+                &:hover {
                     text-decoration: none;
                 }
             }
@@ -67,26 +68,26 @@
 
 }
 
-.divider{
-    background-color:$dimmed-white;
+.divider {
+    background-color: $dimmed-white;
     width: 100%;
     height: 1px;
     margin: 2rem 0 2rem 0;
 }
 
-@media (max-width: 600px){
+@media (max-width: 600px) {
     .links {
         display: flex;
         padding: 1rem;
         justify-content: center;
         flex-wrap: wrap;
-        
+
         div {
             width: fit-content;
             margin-bottom: 3rem;
             flex: 0 0 50%;
 
-            ul{
+            ul {
                 width: fit-content;
                 margin: 0 auto;
                 align-items: center;
@@ -95,12 +96,12 @@
         }
     }
 
-    .copyright{
+    .copyright {
         flex-direction: column;
         gap: 2rem;
     }
 
-    .legal{
+    .legal {
         padding: .75rem;
         margin-top: 2rem;
     }
