--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -28,6 +28,8 @@ $dimmed-text-white: #b6b6b6;
 
 $dimmed-white-trans: #a0a9be80;
 
+$dimmed-white2: rgba(158, 176, 199);
+
 $visible-grey: #1b232d;
 
 $darker-grey: #0d1217;
