--- a/client/src/Pages/Home-Page/join-banner/join-banner.scss
+++ b/client/src/Pages/Home-Page/join-banner/join-banner.scss
@@ -7,7 +7,7 @@
     height: 2500px;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     gap: 40vh;
 }
 
